--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -244,8 +244,9 @@ the EFT operators.
 %Model.
 Secondly, this report considers specific EFT benchmarks 
 whenever neither a simplified model completion 
-nor other simplified models yielding similar kinematic distributions are available. 
-This is the case for dimension-5 or dimension-7 operators with direct 
+nor other simplified models yielding similar kinematic distributions are available\sidenote{and implemented in one of the event generators used by both collaborations.}. 
+This is the case for dimension-5 or dimension-7\sidenote{For dim-7 operators of 
+DM coupling to gauge bosons, there are simplified models in the literature, but they need more ingredients than just the usual mediator and the DM. For example, consider the DM coupling to a SM Higgs singlet mediator, $S$, whose vaccuum expectatino value gives mass to a heavy vector-like fermion, $F$, which also carries SM quantum numbers. The $F$ triangle graph then couples $S$ to the SM gauge boson pair. Thus $\chi \bar{\chi} \rightarrow S \rightarrow F\bar{F} \text{(loop)} \rightarrow G G$ as required.} operators with direct 
 Dark Matter-electroweak boson couplings. 
 Considering these models as separate experimental benchmarks 
 will allow to target new signal regions and help validate the 
