more for tom's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@366 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -215,7 +215,7 @@ Baryonic Higgs vacuum expectation value.
 %the field strengths of $Z$ and $Z'$: this is a free parameter, that is set to be small
 %in the model considered for mono-Higgs signatures. 
 
-"In its most general form, this model can contribute to mono-Z signals due to the \Zprime mixing with the Z or photon. Note that EWSB and $ U(1)_B $ breaking do not lead to this mixing at tree-level. Instead, kinetic mixing occurs between the $ U(1)_Y $ and $ U(1)_B $ gauge bosons due to the gauge invariant term $ F^{\mu\nu}_Y F_{B\mu\nu} $. This mixing is a free parameter which we assume to be small in order to focus on the mono-Higgs signature. Mixing may also occur due to radiative corrections, however this is model dependent so we choose to ignore this here.
+In its most general form, this model can contribute to mono-Z signals due to the \Zprime mixing with the Z or photon. Note that EWSB and $ U(1)_B $ breaking do not lead to this mixing at tree-level. Instead, kinetic mixing occurs between the $ U(1)_Y $ and $ U(1)_B $ gauge bosons due to the gauge invariant term $ F^{\mu\nu}_Y F_{B\mu\nu} $. This mixing is a free parameter which we assume to be small in order to focus on the mono-Higgs signature. Mixing may also occur due to radiative corrections, however this is model dependent so we choose to ignore this here.
 
 %TODO: 
 %	1- Mention sensitivity difference wrt monojet? 
