--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -50,7 +50,7 @@ When the initial state radiation is a $W^\pm$ boson, Run~1 searches have conside
  \item[$\xi=-1$:] Mediator couples to up-type and down-type quarks with same strength, but opposite sign.
 \end{itemize}
 
-Contemplation of $\xi=-1$ heightened interest in searches for \spinone mediators with $W^\pm$ bosons in the final state. This choice enhances the cross-section significantly above the other choices and hardens the distribution of missing transverse energy used in the searches. The sensitivity of the $W+\MET$ search then surpasses that of the jet$+$\MET search. However, the situation $\xi=-1$ does not appear in an $\mathrm{SU}(2)$-gauge-invariant simplified model.\sidenote{It is well-known that the diagrams in which the $W$ couples to $u$ and $\bar{d}$ have opposite sign. This is what gives rise to the ``helciity zero'' in $u \bar{d} \rightarrow W g$. The relative sign is set by $\mathrm{SU}(2)$ and the statement that the mediator is an $\mathrm{SU}(2)$ singlet. We can increase the cross section by changing the sign, but to do so we have to give the mediator some $\mathrm{SU}(2)$ quantum number, making it, and the associated $\chi$, visible.} The simplified model with a vector mediator exchanged in the \schannel model is still viable when $\xi=1$. Ref.~\cite{Bell:2015sza} discusses the viability of departures $\xi < 1$ from both gauge-invariance and experimental points of view. An example of a model that arranges different effective DM couplings to $u_L$ and $d_L$ is detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
+Contemplation of $\xi=-1$ heightened interest in searches for \spinone mediators with $W^\pm$ bosons in the final state. This choice enhances the cross-section significantly above the other choices and hardens the distribution of missing transverse energy used in the searches. The sensitivity of the $W+\MET$ search then surpasses that of the jet$+$\MET search. However, the situation $\xi=-1$ does not appear in an $\mathrm{SU}(2)$-gauge-invariant simplified model.\sidenote{It is well-known that the diagrams in which the $W$ couples to $u$ and $\bar{d}$ have opposite sign. This is what gives rise to the ``helciity zero'' in $u \bar{d} \rightarrow W g$. The relative sign is set by $\mathrm{SU}(2)$ and the statement that the mediator is an $\mathrm{SU}(2)$ singlet. We can increase the cross section by changing the sign, but to do so we have to give the mediator some $\mathrm{SU}(2)$ quantum number, making it, and the associated $\chi$, visible.} The simplified model with a vector mediator exchanged in the \schannel model is still viable when $\xi=1$\sidenote{The $W^\pm$ couples to the initial state quarks as $V$-$A$. If the mediator couples to quarks as $V$+$A$ then one expects the process to vanish completely in the massless quark limit.}. Ref.~\cite{Bell:2015sza} discusses the viability of departures $\xi < 1$ from both gauge-invariance and experimental points of view. An example of a model that arranges different effective DM couplings to $u_L$ and $d_L$ is detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 %The scan in the parameters that characterize this simplified model for EW boson + \MET
 %searches follow what is
@@ -68,9 +68,7 @@ Contemplation of $\xi=-1$ heightened interest in searches for \spinone mediators
 %  and between mediator and initial state quarks (vector-vector, axial-vector, axial-axial, vector-axial).
 % \end{itemize}
 
-As in the case of the jet+\MET models, the width does not have a significant
-impact on the kinematic distributions relevant for those searches. An example
-of the particle-level analysis acceptance using the
+In these $V$+\MET models, as in the case of the jet+\MET models, \pT of the boson or the \MET does not depend strongly on the width of the mediator. An example of the particle-level analysis acceptance using the
 generator-level cuts from Ref.~\cite{Aad:2014tda}
 for the photon+\MET analysis, but raising the photon $p_T$ cut
 to 150~\gev, is shown in Figure~\ref{fig:DMV_EW_gamma_acceptance},
