--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -560,8 +560,8 @@ The Higgs vacuum expectation values lead to $Z-\Zprime$ mass mixing, with a smal
  \end{align}
  where $z_i$ are the $\Zprime$ charges of the two Higgs doublets, and  $g$ and $g_z$ related to the mass-squared
  values in absence of mixing  $(M_Z^0)^2 = g^2(v_d^2+ v_u^2)/(4\cos^2{\theta_w}) $ and
- $(M_{Z'}^0)^2 = g_z^2 ( z_d^2 v_d^2 + z_u^2 v_u^2 + z_\phi^2
- v_\phi^2)$. 
+ $(M_{Z'}^0)^2 = g_z^2 ( z_d^2 v_d^2 + z_u^2 v_u^2 + z_\Phi^2
+ v_\Phi^2)$. 
     
 The production cross section for this model scales as $(g_z)^2$, as the decay width for this process
 to leading order in $\epsilon$ (Eq.~\ref{eq:epsilon}) is
