--- a/doc/tex/Presentation_Of_Experimental_Results.tex
+++ b/doc/tex/Presentation_Of_Experimental_Results.tex
@@ -1,22 +1,22 @@
- We suggest the following to collider searches, when presenting results 
- from the recommended benchmarks: 
+ When collider searches present results with the recommended benchmarks, we suggest the following:
  \begin{itemize}
  \item Provide limits in collider language, on fundamental parameters of
- interaction: couplings and masses of particles in simplified model.
+ the interaction: the couplings and masses of particles in simplified model.
  \item Translate limits to non-collider language, for a range of
- assumptions in order to convey a rough idea of the range of
+ assumptions, in order to convey a rough idea of the range of
  possibilities. The details of this point are left for work beyond the scope of this Forum. 
  \item Provide all necessary material for theorists to reinterpret simplified
  model results as building blocks for more complete models (e.g. signal cutflows,
  acceptances, etc). This point is detailed further in this appendix.
- \item As detailed in ~\cite{Kraml:2012sg}, model-independent results in terms of limits on 
- cross-section times acceptance of new phenomena should be provided for all cases,
- but especially when EFTs are employed as benchmarks. 
+\item Provide model-independent results in terms of limits on
+  cross-section times acceptance of new phenomena for all cases, but
+  especially when EFTs are employed as benchmarks. See
+  Ref.~\cite{Kraml:2012sg} for detailed suggestions.
  \end{itemize}
 
-Along with the design of new searches to hunt for new physics at the LHC, it is important to consider information needed in order to reinterpret the searches outside of the collaborations. The following is a non-exhaustive list of recommendations in order to make reinterpretation easier and faster. This appendix details considerations for reimplementation of the analysis as well as for using the simplified model results directly given by the collaborations. 
+It is important to consider what information phenomenologists need in order to reinterpret the LHC searches. The following is a non-exhaustive list of recommendations in order to ensure reinterpretation is possible, efficient, and fast. This appendix describes considerations for reimplementation of the analyses as well as for using the simplified model results directly given by the collaborations. 
 
-One of the important developments in recent years is an active development of the analyses recasting codes~\cite{Dumont:2014tja, Conte:2014zja, Kim:2015wza,Cranmer:2010hk,ATOM}. The aim of these codes is to provide a public library of reimplemented and validated LHC analyses. Such libraries can then be used to analyze validity of a BSM scenario in a systematic and effective manner. The availability of public libraries further facilitates a unified framework and can lead to an organized and central structure to preserve LHC information in a long run. 
+One of the important developments in recent years is an active development of the analyses recasting codes~\cite{Dumont:2014tja, Conte:2014zja, Kim:2015wza,Cranmer:2010hk,ATOM}. The aim of these codes is to provide a public library of LHC analyses that have been reimplemented and validated, often by the collaborations themselves. Such libraries can then be used to analyze validity of a BSM scenario in a systematic and effective manner. The availability of public libraries further facilitates a unified framework and can lead to an organized and central structure to preserve LHC information long term.
 
 In order to be able to develop such codes, it is important to get complete and systematic information from the collaborations. 
 \begin{itemize}
