added second missing madanalysis reference
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@369 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2562,3 +2562,19 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	reportNumber   = "MAD-PH-547, FERMILAB-PUB-89-243-T",
 	SLACcitation   = "%%CITATION = NUPHA,B339,38;%%",
 }
+
+@article{Conte:2012fm,
+      author         = "Conte, Eric and Fuks, Benjamin and Serret, Guillaume",
+      title          = "{MadAnalysis 5, A User-Friendly Framework for Collider
+                        Phenomenology}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "184",
+      pages          = "222-256",
+      doi            = "10.1016/j.cpc.2012.09.009",
+      year           = "2013",
+      eprint         = "1206.1599",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPHC-PHENO-06",
+      SLACcitation   = "%%CITATION = ARXIV:1206.1599;%%",
+}
